test/files/neg/macro-invalidusage-badbounds/Macros_Test_2.scala
object Macros {
  def foo[U <: String]: Unit = macro Impls.foo[U]
}

object Test extends App {
  import Macros._
  foo[Int]
}